--- a/dbchatbot/pubspec.yaml
+++ b/dbchatbot/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_chat_ui: ^1.6.15
   uuid: ^4.5.1
   http: ^1.3.0
+  supabase_flutter: ^2.8.3
 
 dev_dependencies:
   flutter_test:
