--- a/dbchatbot/pubspec.yaml
+++ b/dbchatbot/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^4.5.1
   http: ^1.3.0
   supabase_flutter: ^2.8.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/aiavatar.jpg
+    - assets/aiavatar.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
